--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
 
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="./abs-web-icon.ico">
 
   <meta property="og:site_name" content="Agile But Safe: Learning Collision-Free High-Speed Legged Locomotion" />
   <meta property="og:type" content="video.other" />
   <meta property="og:title" content="Agile But Safe: Learning Collision-Free High-Speed Legged Locomotion" />
-  <meta property="og:description" content="by Tairan He" />
+  <meta property="og:description" content="by Tairan He, Chong Zhang, Wenli Xiao, Guanqi He, Changliu Liu, Guanya Shi" />
   <meta property="og:url" content="https:/agile-but-safe.github.io/" />
-  <meta property="og:image" content="https:/agile-but-safe.github.io/static/images/preview.gif" />
-  <meta property="og:image:secure" content="https:/agile-but-safe.github.io/static/images/preview.gif" />
-  <meta property="og:video" content="https://www.youtube.com/embed/M7lDCSF0KP0" />
-  <meta property="og:video:secure" content="https://www.youtube.com/embed/M7lDCSF0KP0" />
+  <meta property="og:image" content="https:/agile-but-safe.github.io/static/images/abs-gif-preview.gif" />
+  <meta property="og:image:secure" content="https:/agile-but-safe.github.io/static/images/abs-gif-preview.gif" />
+  <meta property="og:video" content="https://www.youtube.com/embed/E8c4hpg8bRU" />
+  <meta property="og:video:secure" content="https://www.youtube.com/embed/E8c4hpg8bRU" />
   <meta property="og:image:width" content="1280" />
   <meta property="og:image:height" content="720" />
 
-  <meta property="article:publisher" content="https://zipengfu.github.io" />
+  <meta property="article:publisher" content="https://tairanhe.com/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Agile But Safe: Learning Collision-Free High-Speed Legged Locomotion" />
-  <meta name="twitter:description" content="by Ziwen Zhuang, Zipeng Fu, Chelsea Finn, Hang Zhao and co" />
+  <meta name="twitter:description" content="by Tairan He, Chong Zhang, Wenli Xiao, Guanqi He, Changliu Liu, Guanya Shi" />
   <meta name="twitter:url" content="https:/agile-but-safe.github.io/" />
-  <meta name="twitter:image" content="https:/agile-but-safe.github.io/static/images/preview.gif" />
-  <meta name="twitter:site" content="@zipengfu" />
+  <meta name="twitter:image" content="https:/agile-but-safe.github.io/static/images/abs-gif-preview.gif" />
+  <meta name="twitter:site" content="@tairanhe99" />
   <meta name="twitter:card" content="player" />
-  <meta name="twitter:player" content="https://www.youtube.com/embed/M7lDCSF0KP0" />
+  <meta name="twitter:player" content="https://www.youtube.com/embed/E8c4hpg8bRU" />
   <meta name="twitter:player:width" content="1280" />
   <meta name="twitter:player:height" content="720" />
 
