--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
                 </a>
               </span> -->
               <!-- Code Link. -->
+              <span class="link-block">
+                <a href="https://github.com/LeCAR-Lab" class="external-link button is-normal is-rounded is-dark" target="_blank">
+                  <span class="icon">
+                      <svg class="svg-inline--fa fa-github fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" data-fa-i2svg=""><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg><!-- <i class="fab fa-github"></i> Font Awesome fontawesome.com -->
+                  </span>
+                  <span>Code (coming soon)</span>
+                </a>
+              </span>
               <!-- <span class="link-block">
                 <a href="./cn.html" class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
@@ -380,18 +388,34 @@
         <video controls autoplay loop muted playsinline src="./resources/method/hard-dynamics.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
       </div>
     </div> -->
-    <!-- <h2 class="title is-4" style="text-align: center;">Stage 3: Learning a Vision-Based Parkour Policy via Distillation</h2>
+    <h2 class="title is-4" style="text-align: center;">ABS framework</h2>
     <div class="columns is-centered has-text-centered">
-      <div class="column is-two-thirds">
+      <div class="column is-three-thirds">
         <div class="content has-text-justified">
-          <p>
-            After each individual parkour skill is learned, we use DAgger to distill them into a single vision-based parkour policy that can be deployed to a legged robot using only onboard perception and computation power.         
-          </p>
+          <ol type="a">
+            <li>Training architecture: There are four trained modules within the ABS framework:
+              <ol>
+                <li><strong>Agile Policy</strong>  is trained to achieve the maximum agility amidst obstacles;</li>
+                <li><strong>Reach-Avoid Value Network</strong> is trained to predict the RA values conditioned on the agile policy as safety indicators;</li>
+                <li><strong>Recovery Policy</strong> is trained to track desired twist commands (2D linear velocity and yaw angular velocity) that lower the RA values;</li>
+                <li><strong>Ray-Prediction Network</strong>  is trained to predict ray distances as the policies' exteroceptive inputs given depth images.</li>
+              </ol>
+            </li>
+            <li>Deployment architecture: The dual policy setup switches between the <em>agile policy</em> and the <em>recovery policy</em> based on the estimated V̂ from the <em>RA value network</em>:
+              <ol>
+                <li>If V̂ < V<sub>threshold</sub>, the <em>agile policy</em> is activated to navigate amidst obstacles;</li>
+                <li>If V̂ ≥ V<sub>threshold</sub>, the <em>recovery policy</em> is activated to track twist commands that lower the <em>RA values</em> via constrained optimization.</li>
+              </ol>
+            </li>
+          </ol>
         </div>
       </div>
-    </div> -->
+    </div>
+    
     <div class="columns is-centered">
+      <div class="column is-four-fifth">
         <img src="./resources/method/ABS-crop.png" alt="" style="width: 100%;" />
+      </div>
     </div>
   </div>
 </section>
