--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <meta property="og:title" content="Agile But Safe: Learning Collision-Free High-Speed Legged Locomotion" />
   <meta property="og:description" content="by Tairan He, Chong Zhang, Wenli Xiao, Guanqi He, Changliu Liu, Guanya Shi" />
   <meta property="og:url" content="https://agile-but-safe.github.io/" />
-  <meta property="og:image" content="https://agile-but-safe.github.io/static/images/Youtube-Cover.png" />
-  <meta property="og:image:secure" content="https://agile-but-safe.github.io/static/images/Youtube-Cover.png" />
+  <meta property="og:image" content="https://agile-but-safe.github.io/static/images/abs-gif-preview_1M.gif" />
+  <meta property="og:image:secure" content="https://agile-but-safe.github.io/static/images/abs-gif-preview_1M.gif" />
   <meta property="og:video" content="https://www.youtube.com/embed/E8c4hpg8bRU" />
   <meta property="og:video:secure" content="https://www.youtube.com/embed/E8c4hpg8bRU" />
   <meta property="og:image:width" content="1280" />
@@ -43,7 +43,7 @@
   <meta name="twitter:title" content="Agile But Safe: Learning Collision-Free High-Speed Legged Locomotion" />
   <meta name="twitter:description" content="by Tairan He, Chong Zhang, Wenli Xiao, Guanqi He, Changliu Liu, Guanya Shi" />
   <meta name="twitter:url" content="https://agile-but-safe.github.io/" />
-  <meta name="twitter:image" content="https://agile-but-safe.github.io/static/images/Youtube-Cover.png" />
+  <meta name="twitter:image" content="https://agile-but-safe.github.io/static/images/abs-gif-preview_1M.gif" />
   <meta name="twitter:site" content="@tairanhe99" />
   <meta name="twitter:card" content="player" />
   <meta name="twitter:player" content="https://www.youtube.com/embed/E8c4hpg8bRU" />
