--- a/index.html
+++ b/index.html
@@ -401,10 +401,10 @@
                 <li><strong>Ray-Prediction Network</strong>  is trained to predict ray distances as the policies' exteroceptive inputs given depth images.</li>
               </ol>
             </li>
-            <li>Deployment architecture: The dual policy setup switches between the <em>agile policy</em> and the <em>recovery policy</em> based on the estimated V̂ from the <em>RA value network</em>:
+            <li>Deployment architecture: The dual policy setup switches between the <em>agile policy</em> and the <em>recovery policy</em> based on the estimated V̂ from the RA value network:
               <ol>
                 <li>If V̂ < V<sub>threshold</sub>, the <em>agile policy</em> is activated to navigate amidst obstacles;</li>
-                <li>If V̂ ≥ V<sub>threshold</sub>, the <em>recovery policy</em> is activated to track twist commands that lower the <em>RA values</em> via constrained optimization.</li>
+                <li>If V̂ ≥ V<sub>threshold</sub>, the <em>recovery policy</em> is activated to track twist commands that lower the RA values via constrained optimization.</li>
               </ol>
             </li>
           </ol>
