--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 </section>
 <section class="section">
   <div class="container">
-    <h2 class="title is-2" style="text-align: center;">Collision Avoidance with Diverse Objects or Amidst</h2>
+    <h2 class="title is-2" style="text-align: center;">Collision Avoidance with Diverse Objects</h2>
     <div class="columns is-centered">
       <div class="column is-full-width is-centered has-text-centered">
         <video controls autoplay loop muted playsinline src="./resources/collision_avoidance_diverse_settings/static_object_0.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
