--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
   </div>
 </section>
 
+
+
 <section class="section">
   <div class="container">
     <h2 class="title is-2" style="text-align: center;">Agility Test</h2>
@@ -329,6 +331,72 @@
   </div>
 </section>
 
+
+<section class="section">
+  <div class="container">
+    <h2 class="title is-2" style="text-align: center;">Baseline Comparison</h2>
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-highbay-ABS.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        </div>
+      </div>
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-highbay-RL.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        </div>
+      </div>
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-highbay-LAG.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-NSH-ABS.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        </div>
+      </div>
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-NSH-RL.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        </div>
+      </div>
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-NSH-LAG.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-Outdoor-ABS.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+          <p>
+            ABS
+          </p>
+        </div>
+      </div>
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-Outdoor-RL.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        <p>
+          ABS (agile policy only)
+        </p>
+        </div>
+      </div>
+      <div class="column is-full-width is-centered has-text-centered">
+        <video controls autoplay loop muted playsinline src="./resources/baseline_comparison/baseline-comparison-Outdoor-LAG.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <div class="content is-two-third has-text-centered">
+        <p>
+          Lagrangian methods 
+        </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
@@ -420,37 +488,7 @@
   </div>
 </section>
 
-<!-- <section class="section">
-  <div class="container">
-    <h2 class="title is-2" style="text-align: center;">Failure Cases</h2>
-    <div class="columns is-centered">
-      <div class="column is-full-width is-centered has-text-centered">
-        <video controls autoplay loop muted playsinline src="./resources/failures/failure-climb-too-high.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-        <div class="content is-two-third has-text-centered">
-          <p>
-            The robot fails to climb very high obstacles of 0.8m, three times the robot height.
-          </p>
-        </div>
-      </div>
-      <div class="column is-full-width is-centered has-text-centered">
-        <video controls autoplay loop muted playsinline src="./resources/failures/failure-leap-low-friction.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-        <div class="content is-two-third has-text-centered">
-        <p>
-          The robot fails to leap on a low-friction platform. The rear legs slip during leaping leading to not much forward momentum for the robot to reach the other side.
-        </p>
-        </div>
-      </div>
-      <div class="column is-full-width is-centered has-text-centered">
-        <video controls autoplay loop muted playsinline src="./resources/failures/failure-climb-soft-objects.mp4" poster="./resources/loading-icon.gif" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-        <div class="content is-two-third has-text-centered">
-        <p>
-          The robot fails to climb a high and soft obstacle. 
-        </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
+
 
 
 <section class="section" id="BibTeX">
