--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </span> -->
               <!-- arXiv Link. -->
               <span class="link-block">
-                <a href="https://agile-but-safe.github.io/"
+                <a href="https://arxiv.org/abs/2401.17583"
                    class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
