--- a/index.html
+++ b/index.html
@@ -489,7 +489,28 @@
 </section>
 
 
-
+<section class="section">
+  <div class="container">
+    <h2 class="title is-2" style="text-align: center;" id="press-coverage">Media</h2>
+    <br>
+    <div class="columns is-centered">
+      <div class="column is-centered has-text-centered">
+        <a target="_blank" href="https://spectrum.ieee.org/video-friday-agile-but-safe">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/IEEE-Spectrum.svg" width="70%"></img>
+        </a>
+      </div>
+      <!-- <div class="column is-centered has-text-centered">
+        <a target="_blank" href="https://www.cs.cmu.edu/news/2023/robot-parkour">
+          <img src="https://www.cmu.edu/common/standard-v6/images/cmu-wordmark.png" width="90%"></img>
+        </a>
+      </div> -->
+      <div class="column is-centered has-text-centered">
+        <a target="_blank" href="https://mp.weixin.qq.com/s/A8m8asq9ErAcyPQBlj9yPw">
+          <img src="https://pbs.twimg.com/profile_banners/745803592154546176/1468580225/1500x500" width="70%"></img>
+        </a>
+      </div>
+  </div>
+</section>
 
 <section class="section" id="BibTeX">
   <div class="container content">
