--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
                 </a>
               </span> -->
               <!-- twitter Link. -->
-              <!-- <span class="link-block">
-                <a href="https://x.com/zipengfu/status/1701316023612219445?s=20"
+              <span class="link-block">
+                <a href="https://x.com/TairanHe99/status/1752866293118558653?s=20"
                    class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
                       <i class="fab fa-twitter"></i>
                   </span>
                   <span>Summary</span>
                 </a>
-              </span> -->
+              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/LeCAR-Lab/ABS" class="external-link button is-normal is-rounded is-dark" target="_blank">
