--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <div class="column">
               <image src="./static/images/logo.png" style="width: 60%;"></image>
           </div>
-          <!-- <div class="is-size-4 publication-authors">
-            CoRL 2023 (Oral)
-          </div> -->
+          <div class="is-size-4 publication-authors">
+            RSS 2024
+          </div>
           <!-- <div class="is-size-4 publication-authors">
             <b style="color:rgb(255, 100, 100);">Best Systems Paper Award Finalist (top 3)</b>
           </div> -->
