--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="column">
               <image src="./static/images/logo.png" style="width: 60%;"></image>
           </div>
-          <div class="is-size-4 publication-authors">
+          <div class="is-size-4 publication-authors", style="margin-bottom: 0.5cm;">
             RSS 2024
           </div>
           <!-- <div class="is-size-4 publication-authors">
@@ -523,7 +523,7 @@
     <pre><code>@inproceedings{he2024agile,
   author    = {He, Tairan and Zhang, Chong and Xiao, Wenli and He, Guanqi and Liu, Changliu and Shi, Guanya},
   title     = {Agile But Safe: Learning Collision-Free High-Speed Legged Locomotion},
-  booktitle = {arXiv},
+  booktitle = {Robotics: Science and Systems (RSS)},
   year      = {2024},
 }</code></pre>
   </div>
