--- a/index.html
+++ b/index.html
@@ -499,11 +499,11 @@
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/IEEE-Spectrum.svg" width="70%"></img>
         </a>
       </div>
-      <!-- <div class="column is-centered has-text-centered">
-        <a target="_blank" href="https://www.cs.cmu.edu/news/2023/robot-parkour">
+      <div class="column is-centered has-text-centered">
+        <a target="_blank" href="https://www.ri.cmu.edu/collision-free-high-speed-robots/">
           <img src="https://www.cmu.edu/common/standard-v6/images/cmu-wordmark.png" width="90%"></img>
         </a>
-      </div> -->
+      </div>
       <div class="column is-centered has-text-centered">
         <a target="_blank" href="https://mp.weixin.qq.com/s/A8m8asq9ErAcyPQBlj9yPw">
           <img src="https://pbs.twimg.com/profile_banners/745803592154546176/1468580225/1500x500" width="70%"></img>
