updated RI media

--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-full-width is-centered has-text-centered">
-        <!-- <h2 class="title is-2" style="text-align: center;" id="method-video" >Real-World Robot Parkour Demos</h2> -->
+        <h2 class="title is-2" style="text-align: center;" id="method-video" >Real-World Demos</h2>
         <div class="publication-video">
           <iframe src="https://www.youtube.com/embed/elWwPn5IhjA" title="Agile But Safe: Learning Collision-Free High-Speed Legged Locomotion"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
-      <!-- <div class="column is-full-width is-centered has-text-centered">
-        <h2 class="title is-2" style="text-align: center;" id="oral-video" >Oral Presentation</h2>
+      <div class="column is-full-width is-centered has-text-centered">
+        <h2 class="title is-2" style="text-align: center;" id="oral-video" >Video Story</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/zhpI3JTqQGI" title="[CoRL 2023 Oral Talk] Deep Whole-Body Control" 
+          <iframe src="https://www.youtube.com/embed/oyMf-yaB2d0" title="Agile But Safe : Learning Collision-Free High-Speed Legged Locomotion" 
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
 </section>
