--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <div class="is-size-4 publication-authors", style="margin-bottom: 0.5cm;">
             RSS 2024
           </div>
-          <div class="is-size-4 publication-authors">
-            ICRA 2024 Agile Robotics Workshop <b style="color:rgb(255, 100, 100);">(Spotlight)</b>
+          <div class="is-size-4 publication-authors" >
+            ICRA 2024 Agile Robotics Workshop (Spotlight)
           </div>
           <!-- <div class="is-size-4 publication-authors">
             <b style="color:rgb(255, 100, 100);">Best Systems Paper Award Finalist (top 3)</b>
