--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
           <div class="is-size-4 publication-authors", style="margin-bottom: 0.5cm;">
             RSS 2024
           </div>
-          <div class="is-size-4 publication-authors" >
+          <!-- <div class="is-size-4 publication-authors" >
             ICRA 2024 Agile Robotics Workshop (Spotlight)
-          </div>
-          <!-- <div class="is-size-4 publication-authors">
-            <b style="color:rgb(255, 100, 100);">Best Systems Paper Award Finalist (top 3)</b>
           </div> -->
+          <div class="is-size-4 publication-authors">
+            <b style="color:rgb(255, 100, 100);">Outstanding Student Paper Award Finalist (top 3)</b>
+          </div>
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
